<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragments.UserProfileFragment"
        android:background="@drawable/background_blue">
        <ImageButton
            android:id="@+id/btn_back_profile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_back_btn"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <ImageButton
            android:id="@+id/btn_search_users"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_search_btn"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toStartOf="@id/btn_update_profile"
            app:layout_constraintTop_toTopOf="parent"/>
        <ImageButton
            android:id="@+id/btn_update_profile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_update_btn"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_profile_text"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
            android:id="@+id/iv_photo_profile"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_profile"
            tools:src="@mipmap/ic_launcher"/>
        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/iv_photo_profile"
            app:layout_constraintTop_toTopOf="@id/iv_photo_profile"
            app:layout_constraintEnd_toStartOf="@+id/tv_user_surname"
            app:layout_constraintHorizontal_chainStyle="packed"
            tools:text="Andrey"/>
        <TextView
            android:id="@+id/tv_user_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/tv_user_name"
            app:layout_constraintTop_toTopOf="@id/tv_user_name"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Arshavin"/>
        <TextView
            android:id="@+id/tv_user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_user_login_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/iv_photo_profile"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name"/>
        <TextView
            android:id="@+id/tv_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/tv_user_email_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/iv_photo_profile"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_login"/>
        <TextView
            android:id="@+id/tv_user_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/tv_user_country_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/iv_photo_profile"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_email"/>
        <TextView
            android:id="@+id/tv_user_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/tv_user_city_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/iv_photo_profile"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_country"/>
        <TextView
            android:id="@+id/tv_user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/tv_user_phone_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/iv_photo_profile"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_city"/>
        <TextView
            android:id="@+id/tv_user_date_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_date_create_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/iv_photo_profile"
            app:layout_constraintTop_toBottomOf="@+id/iv_photo_profile"/>
        <TextView
            android:id="@+id/tv_user_date_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tv_date_update_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/iv_photo_profile"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_date_create"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>